--- a/Chatbot_Alura_IA.ipynb
+++ b/Chatbot_Alura_IA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM665xI2ErbycrE6pvvfIIU",
+      "authorship_tag": "ABX9TyO/3o3EbOu4Li1LBlarP7mR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,8 +42,9 @@
       "source": [
         "# Import the Python SDK\n",
         "import google.generativeai as genai\n",
-        "\n",
-        "GOOGLE_API_KEY='Cole aqui o seu api key do google'\n",
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
+        "GOOGLE_API_KEY=api_key\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ],
       "metadata": {
